--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -86,6 +86,7 @@ jobs:
       - name: Upload reports to Codecov
         uses: codecov/codecov-action@v4
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
           file: coverage/coverage.xml
 
