Use an older version of ICU with PHP 8.1

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -258,6 +258,7 @@ jobs:
             git \
             gmp \
             icu4c \
+            icu4c@74 \
             krb5 \
             libavif \
             libedit \
@@ -321,6 +322,7 @@ jobs:
             git \
             gmp \
             icu4c \
+            icu4c@74 \
             krb5 \
             libavif \
             libedit \
